--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,10 +15,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Accueil<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Produits<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/produits">Produits</a>
+        <a class="nav-link" href="/panier">Panier</a>
       </li>
     </ul>
   </div>
