--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Produits{% endblock %}
 
 {% block body %}
 <style>
