--- a/templates/brand_new/index.html.twig
+++ b/templates/brand_new/index.html.twig
@@ -11,6 +11,8 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
+    <p> Cette page est créee pour la semaine de déploiment symfony. </p>
+
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/wamp64/www/Symfony-RenduFinal/src/Controller/BrandNewController.php'|file_link(0) }}">src/Controller/BrandNewController.php</a></code></li>
