--- a/templates/brand_new/index.html.twig
+++ b/templates/brand_new/index.html.twig
@@ -11,7 +11,7 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    <p> Cette page est créee pour la semaine de déploiment symfony. </p>
+    <p> Cette page est créée pour la semaine de déploiment symfony. </p>
 
     This friendly message is coming from:
     <ul>
