--- a/templates/brand_new/index.html.twig
+++ b/templates/brand_new/index.html.twig
@@ -9,9 +9,9 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Déploiment Symfony</h1>
 
-    <p> Cette page est créée pour la semaine de déploiment symfony. </p>
+    <p> Cette page est créée pour la semaine de Déploiment Symfony. </p>
 
     This friendly message is coming from:
     <ul>
